gave .edit and .start divs z-index 1 to prevent being overlapped by chart div

--- a/locust/static/style.css
+++ b/locust/static/style.css
@@ -92,6 +92,7 @@ a {
     left: 50%;
     top: 100px;
     margin-left: -169px;
+    z-index: 1;
 }
 
 .ramp {
